# secure-source-code-training

./: Dockerfile  README.md  commands.txt
1 - Injection_Flaws/: CMakeLists.txt  Dockerfile  commands.txt  docker-compose.yml  main.cpp  postgres.env  schema.sql
1 - Injection_Flaws/staging/: Dockerfile
1 - injection-flaws/: CMakeLists.txt  app.env  commands.txt  main.cpp  populate_db.sh
1 - injection-flaws/html/: users.html
1 - injection-flaws/staging/: Dockerfile
2 - Buffer_Overflows/: Dockerfile
2 - buffer-overflow/: command.txt  main.c
3 - Cross_Site_Scripting/: Startup.cs
3 - Cross_Site_Scripting/Migrations/: 20200929065338_AddBookToDb.Designer.cs  20200929114519_AddISBNToBookModel.Designer.cs
3 - Cross_Site_Scripting/Model/: Book.cs
3 - Cross_Site_Scripting/Pages/: Error.cshtml  Index.cshtml
3 - Cross_Site_Scripting/Pages/BookList/: Edit.cshtml.cs  Index.cshtml  Index.cshtml.cs  Index1.cshtml.cs
3 - Cross_Site_Scripting/Properties/: launchSettings.json
3 - Cross_Site_Scripting/wwwroot/js/: bookList.js
3 - cross-site-scripting/: BookListRazor.csproj  BookListRazor.sln  appsettings.json
3 - cross-site-scripting/Controllers/: BookController.cs  CodeReview.cs
3 - cross-site-scripting/Model/: ApplicationDbContext.cs
3 - cross-site-scripting/Pages/BookList/: Edit.cshtml  Upsert.cshtml  Upsert.cshtml.cs  create.cshtml  create.cshtml.cs
3 - cross-site-scripting/Pages/Shared/: _Layout.cshtml
